@@ -10,6 +10,7 @@ siril xxxxxxx
 * Added faster location and scale estimators to replace IKSS with similar accuracy
 * Added specifying a level for biases
 * Added new 3star registration algorithm
+* Added ser debayering at preprocess
 * Remember focal and pixel size in astrometry tool
 * Updated sampling information after channel extraction and drizzle
 * Fixed bands appearing on mean stacking for CFA SER sequences
